infra/k8s/challenges.depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: challenges-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: challenges
  template:
    metadata:
      labels:
        app: challenges
    spec:
      containers:
        - name: challenges
          image: ithkkeii/challenges
          resources:
            limits:
              memory: "512Mi"
              cpu: "128m"
---
apiVersion: v1
kind: Service
metadata:
  name: challenges-srv
spec:
  selector:
    app: challenges
  ports:
    - name: challenges
      protocol: TCP
      port: 3000
      targetPort: 3000
