infra/k8s/external-name.srv.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres-db
spec:
  type: ExternalName
  externalName: db.glgidvxsxnnezynuzrdn.supabase.co
