infra/k8s/kafka-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kafka-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kafka
  template:
    metadata:
      labels:
        app: kafka
    spec:
      containers:
        - name: kafka
          image: bitnami/kafka:latest
          volumeMounts:
            - name: config
              mountPath: "/bitnamis/kafka/config/server.properties"
              subPath: "server.properties"
          resources:
            limits:
              memory: "1024Mi"
              cpu: "500m"
          ports:
            - containerPort: 9092
            - containerPort: 9093
      volumes:
        - name: "config"
          configMap:
            name: "config"
---
apiVersion: v1
kind: Service
metadata:
  name: kafka-srv
spec:
  selector:
    app: kafka
  ports:
    - port: 9092
      name: kafka
      targetPort: 9092
