infra/k8s/questions-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: questions-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: questions
  template:
    metadata:
      labels:
        app: questions
    spec:
      containers:
        - name: questions
          image: ithkkeii/questions
          resources:
            limits:
              memory: "512Mi"
              cpu: "500m"
---
apiVersion: v1
kind: Service
metadata:
  name: questions-srv
spec:
  selector:
    app: questions
  ports:
    - name: questions
      protocol: TCP
      port: 3000
      targetPort: 3000
